# flask-baby-app

./: .env.local.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml  setup.py
.azuredevops/: azure-pipelines.yml  code-quality.yml  docs.yml  pull_request_template.md  tests.yml
alembic/: env.py
alembic/versions/: 735c9b1421a9_init_migration.py
docs/: Makefile
docs/source/: conf.py  index.rst
requirements/: requirements-dev.txt  requirements-docs.txt  requirements.txt
src/: __init__.py  __main__.py  config.py
src/auth/: auth_decorators.py
src/controllers/: OccurrenceController.py
src/database/: connector.py
src/helpers/: auth.py  errors.py  exceptions.py  log.py
src/models/: AnalysisType.py  BaseMixInModel.py  BaseModel.py  Occurrence.py
src/schemas/: OccurrenceDto.py
src/types/: payloads.py  token.py
src/view/: __init__.py  occurrence.py
testing/helpers/: keycloak.py
testing/utils/: database.py  db_teardown.py
tests/: conftest.py  smoke_test.py
