[project]
name = "data-api"
description = "Python package within a data API"
authors = [{name = "PixForce", email = "contato@pixforce.ai"}]
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dynamic = [
  "dependencies",
  "optional-dependencies",
  "readme",
  "version",
]

[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=61.2",
]

[tool.setuptools]
  zip-safe = true
  include-package-data = false

  [tool.setuptools.dynamic]
    dependencies = {file = ["requirements/requirements.txt"]}
    version = {attr = "data_api.__version__"}
    readme = {file = ["README.md"], content-type = "text/markdown"}

  [tool.setuptools.dynamic.optional-dependencies]
    dev = {file = "requirements/requirements-dev.txt"}
    docs = {file = "requirements/requirements-docs.txt"}

  [tool.setuptools.package-dir]
    data_api = "src"

[tool.distutils.bdist_wheel]
  universal = true

[project.scripts]
light-data-api = "data_api:__main__.main"
[tool.ruff]
  line-length = 128
  target-version = "py38"
  select = [
    "AIR",    # Airflow
    "ASYNC",  # flake8-async
    "BLE",    # flake8-blind-except
    "C4",     # flake8-comprehensions
    "C90",    # McCabe cyclomatic complexity
    # "CPY",    # Copyright-related rules
    "DTZ",    # flake8-datetimez
    "E",      # pycodestyle
    "F",      # Pyflakes
    "FLY",    # flynt
    "I",      # isort
    "ICN",    # flake8-import-conventions
    "INT",    # flake8-gettext
    "NPY",    # NumPy-specific rules
    "PL",     # Pylint
    "PYI",    # flake8-pyi
    "RSE",    # flake8-raise
    "RUF",    # Ruff-specific rules
    "S",      # flake8-bandit
    "SLOT",   # flake8-slots
    "T10",    # flake8-debugger
    "TID",    # flake8-tidy-imports
    "UP",     # pyupgrade
    "W",      # pycodestyle
    "YTT",    # flake8-2020
    # "A",    # flake8-builtins
    # "ANN",  # flake8-annotations
    "ARG",  # flake8-unused-arguments
    "B",    # flake8-bugbear
    # "COM",  # flake8-commas
    "D",    # pydocstyle
    # "DJ",   # flake8-django
    "EM",   # flake8-errmsg
    # "ERA",  # eradicate
    # "EXE",  # flake8-executable
    "FA",   # flake8-future-annotations
    "FBT",  # flake8-boolean-trap
    # "FIX",  # flake8-fixme
    "G",    # flake8-logging-format
    # "INP",  # flake8-no-pep420
    # "ISC",  # flake8-implicit-str-concat
    # "N",    # pep8-naming
    # "PD",   # pandas-vet
    # "PERF", # Perflint
    # "PGH",  # pygrep-hooks
    # "PIE",  # flake8-pie
    "PT",   # flake8-pytest-style
    # "PTH",  # flake8-use-pathlib
    # "Q",    # flake8-quotes
    # "RET",  # flake8-return
    # "SIM",  # flake8-simplify
    # "SLF",  # flake8-self
    # "T20",  # flake8-print
    "TCH",  # flake8-type-checking
    "TD",   # flake8-todos
    # "TRY",  # tryceratops
  ]

  [tool.ruff.format]
    quote-style = "single"
    skip-magic-trailing-comma = false

  [tool.ruff.isort]
    known-first-party = ["data_api", "tests", "testing"]
    split-on-trailing-comma = true
    required-imports = ["from __future__ import annotations"]


  [tool.ruff.pylint]
    max-args = 5  # Recommended: 5
    max-branches = 12 # Recommended: 12
    max-returns = 6  # Recommended: 6
    max-statements = 50  # Recommended: 50

  [tool.ruff.lint.pydocstyle]
    convention = "numpy"

  [tool.ruff.per-file-ignores]
    "tests/*" = ["S101", "D"] # allow assert, ignore missing docs
    "src/view/*" = ["PLR6301"] # to allow flask_restx methods
    "__init__.py" = ["D", "F401"] # Ignore docstring, allow unused import****

[tool.coverage.run]
  plugins = ["covdefaults"]

[tool.mypy]
  files = ["src/"]
  check_untyped_defs = true
  disallow_any_generics = true
  disallow_incomplete_defs = true
  disallow_untyped_defs = true
  ignore_missing_imports = false
  no_implicit_optional = true
  warn_unused_ignores = true
  warn_redundant_casts = true
